Try again to get CI working

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -3,7 +3,7 @@ on:
   push:
   pull_request:
 jobs:
-  ci:
+  stable:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
@@ -11,7 +11,31 @@ jobs:
       if: "github.ref == 'refs/heads/master'"
       env:
         CLOUD_TOKEN: ${{ secrets.CLOUD_TOKEN }}
-      run: ./ci/build.sh
+      run: "./ci/build.sh stable"
     - name: Build
       if: "github.ref != 'refs/heads/master'"
-      run: ./ci/build.sh
+      run: "./ci/build.sh stable"
+  nixos_20_03:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build Release
+      if: "github.ref == 'refs/heads/master'"
+      env:
+        CLOUD_TOKEN: ${{ secrets.CLOUD_TOKEN }}
+      run: "./ci/build.sh 20.03"
+    - name: Build
+      if: "github.ref != 'refs/heads/master'"
+      run: "./ci/build.sh 20.03"
+  nixos_19_09:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build Release
+      if: "github.ref == 'refs/heads/master'"
+      env:
+        CLOUD_TOKEN: ${{ secrets.CLOUD_TOKEN }}
+      run: "./ci/build.sh 19.09"
+    - name: Build
+      if: "github.ref != 'refs/heads/master'"
+      run: "./ci/build.sh 19.09"
