--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -15,6 +15,18 @@ jobs:
     - name: Build
       if: "github.ref != 'refs/heads/master'"
       run: "./ci/build.sh stable"
+  nixos_20_09:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build Release
+      if: "github.ref == 'refs/heads/master'"
+      env:
+        CLOUD_TOKEN: ${{ secrets.CLOUD_TOKEN }}
+      run: "./ci/build.sh 20.09"
+    - name: Build
+      if: "github.ref != 'refs/heads/master'"
+      run: "./ci/build.sh 20.09"
   nixos_20_03:
     runs-on: macos-latest
     steps:
