Upgrade to latest NixOS

--- a/.github/workflows/upgrade-vars.yml
+++ b/.github/workflows/upgrade-vars.yml
@@ -1,7 +1,7 @@
 name: "Update vars"
 on:
   schedule:
-    - cron:  '0 12 * * 4'
+    - cron:  '0 12 1 * *'
   repository_dispatch:
 jobs:
   debug:
